Dealer And Contractor

--- a/force-app/main/default/classes/CommissionCalculatorConstants.cls
+++ b/force-app/main/default/classes/CommissionCalculatorConstants.cls
@@ -8,4 +8,7 @@ public class CommissionCalculatorConstants {
     public static final Decimal MARGINPERCENTFOROPPWITHNOSPLITS =  100;   
     public static final Decimal MARGINPERCENTFORACCOUNTS =  100;  
     public static final String REPTYPEAD = 'Sales Representative - A&D';
-}
+    public static final String REPTYPEDEALER = 'Sales Representative - Dealer';
+    public static final String REPTYPECONTRACTOR = 'Sales Representative - Contractor';
+    public static final List<String> PROFILENAMES = new list<string>{'Sales Representative - A&D','Sales Representative - Dealer','Sales Representative - Contractor'};
+} 
